2008-09-15  Alan Modra  <amodra@bigpond.net.au>

	* write.c (install_reloc): Correct EMIT_SECTION_SYMBOLS test.

2008-09-15  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-frv.c (md_apply_fix): Use abs_section_sym for
	relocs with no symbol.
	* config/tc-mmix.c (md_assemble): Mark fake symbol on
	BFD_RELOC_MMIX_BASE_PLUS_OFFSET as OK for use by relocs.
	(mmix_md_end): Likewise mark mmix reg contents section symbol.

2008-09-14  Chris Smith <chris@zxdesign.info>

	* config/tc-z80.c: Opcode generation of ld a,(bc) and ld a,(de) was
	broken, as the opcode of ld a,(de) was being emitted for both.

2008-09-12  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (init_op_placement_info_table): Allow number of
	operands equal to MAX_INSN_ARGS.

2008-09-11  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* configure.in: Call AC_SYS_LARGEFILE.
	* config.in: Regenerate.
	* configure: Regenerate.

2008-09-09  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (ppc_setup_opcodes): Simplify POWER4/NOPOWER4 test.
	Remove POWER5 and POWER6 tests.

2008-09-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/tc-hppa.c (hppa_regname_to_dw2regnum): Add register name to
	number support for 32-bit targets.

2008-09-08  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add a marker for the 2.19 features.

2008-09-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* config/tc-hppa.h (DIFF_EXPR_OK): Define for SOM target.  Revise
	comment regarding use of difference expressions.
	(TC_FORCE_RELOCATION_SUB_LOCAL): Define to 1.

	* dw2gencfi.c (CFI_DIFF_EXPR_OK): Define if not defined.
	(dot_cfi_personality): Use CFI_DIFF_EXPR_OK instead of DIFF_EXPR_OK.
	(dot_cfi_lsda, output_cie, output_fde): Likewise.
	* config/tc-hppa.h (CFI_DIFF_EXPR_OK): Define.

2008-09-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.h (DWARF2_FDE_RELOC_SIZE): Define.

2008-09-03  Nick Clifton  <nickc@redhat.com>
